--- a/zad2_vezbe11/dialog.ui
+++ b/zad2_vezbe11/dialog.ui
@@ -36,7 +36,7 @@
     </rect>
    </property>
   </widget>
-  <widget class="QLabel" name="label_3">
+  <widget class="QLabel" name="Digital_clock">
    <property name="geometry">
     <rect>
      <x>390</x>
@@ -46,7 +46,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>-----</string>
+    <string/>
    </property>
   </widget>
   <widget class="QPushButton" name="pushButton">
@@ -62,7 +62,7 @@
     <string>Potvrdi</string>
    </property>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>200</x>
